<resources>
    <string name="app_name">Precify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_death_cases">Deaths</string>
    <string name="total_recovered_cases">Recovered</string>
    <string name="total_active_cases">Active</string>
    <string name="total_cases">Cases</string>
    <string name="this_is_news_title">This is News Title</string>
    <string name="description">Description: </string>
    <string name="app_description">
        Coview provides you global covid 19 stats as well as stats specific to India. It also helps by
        keeping you updated by providing news articles related to covid-19. Coview also caches the response to local
        database so you can use app even when you are offline.
    </string>
    <string name="license">License</string>
    <string name="license_description">
        The app is licensed under GNU General public license. \n
        You should have received a copy of the GNU General Public License
        along with this program.  If not, see <a href="https://www.gnu.org/licenses/">this</a>

    </string>
    <string name="made_by_rohit_chaudhari">Made By Rohit Chaudhari</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="icon_made_by_freepik_from_www_flaticon_com">Icon made by Freepik from www.flaticon.com</string>
</resources>
