<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".Activities.AboutActivity">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="About"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?android:colorBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>
    <View
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:background="@drawable/card_background"
            android:layout_height="0.25dp" android:id="@+id/view2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toTopOf="@+id/textView8"/>
    <TextView
            android:text="@string/app_description"
            android:lineSpacingMultiplier="1.4"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
    <View
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:background="@drawable/card_background"
            android:layout_height="0.25dp" android:id="@+id/view3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toTopOf="@+id/textView8"/>
    <TextView
            android:text="@string/license_description"
            android:lineSpacingMultiplier="1.4"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/icon_made_by_freepik_from_www_flaticon_com"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView11"/>
        <TextView
                android:text="@string/version_1_0"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView12"/>
        <TextView
                android:text="@string/made_by_rohit_chaudhari"
                android:textAlignment="center"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView13"/>
    </LinearLayout>


</LinearLayout>